--- a/taller evaluativo/Ejercicio5.html
+++ b/taller evaluativo/Ejercicio5.html
@@ -26,7 +26,7 @@
             }
         }
 
-        console.log(a+"               " + b)
+        console.log(a+"\n" + b)
     </script>
 </body>
 </html>
